syntax = "proto3";

package nebius.iam.v1;

import "nebius/annotations.proto";
import "nebius/audit/annotations.proto";
import "nebius/iam/v1/token_service.proto";

option java_multiple_files = true;
option java_outer_classname = "TokenExchangeServiceProto";
option java_package = "ai.nebius.iam.token.v1";

service TokenExchangeService {
  option (api_service_name) = "tokens.iam";
  option (service_visibility) = PUBLIC;
  option (audit.service_audit).enabled = true;

  rpc Exchange(ExchangeTokenRequest) returns (CreateTokenResponse);
}
