syntax = "proto3";

package yandex.cloud.priv.servicecontrol.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";
import "ydb/public/api/client/yc_private/servicecontrol/resource.proto";

service AccessService {
  // Verify the identity of a subject.
  //
  // gRPC error codes
  //
  // Ok:              the provided credentials are valid
  // Unauthenticated: the provided credentials are invalid or may have expired
  // InvalidArgument: the client specified an invalid argument (please note that this applies to the request in itself,
  //                  not to the content of the request, i.e. you will get the InvalidArgument error if the message
  //                  size exceeds the server limit but Unauthenticated if the token format is not recognized)
  // Unavailable:     the service is currently unavailable, the client should retry again
  // Internal:        the service is broken
  //
  // Please note that these do not include client-side errors (e.g. Cancelled, DeadlineExceeded, etc.)
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);

  // Check if a subject is allowed to perform an action. This also authenticates the subject if any credentials are
  // passed as an identity.
  //
  // gRPC error codes
  //
  // Ok:               the provided credentials (if any) are valid and the subject has permissions to access the
  //                   specified resource
  // Unauthenticated:  the provided credentials are invalid or may have expired
  // PermissionDenied: the subject does not have permissions to access the specified resource
  // InvalidArgument:  the client specified an invalid argument (please note that this applies to the request in itself,
  //                   not to the content of the request, i.e. you will get the InvalidArgument error if the message
  //                   size exceeds the server limit or the specified permission does not exist but Unauthenticated if
  //                   the token format is not recognized)
  // Unavailable:      the service is currently unavailable, the client should retry again
  // Internal:         the service is broken
  //
  // Please note that these do not include client-side errors (e.g. Cancelled, DeadlineExceeded, etc.)
  rpc Authorize (AuthorizeRequest) returns (AuthorizeResponse);

  // Similar to Authorize, but requests multiple actions for one subject.
  //
  // gRPC error codes will be the same, except for these cases:
  // - An Unauthenticated error of BulkAuthorizeRequest.identity is returned in
  //   BulkAuthorizeResponse.unauthenticated_error.
  // - All PermissionDenied of BulkAuthorizeRequest.authorizations are returned in
  //   BulkAuthorizeResponse.results.
  //
  // You can control the information returned in BulkAuthorizeResponse.results with:
  // - result_filter : return all errors (ALL_FAILED) or only the first one (FIRST_FAILED), if any.
  // - result_mask : You can choose the fields returned (all by default),
  //     from the fields in BulkAuthorizeResponse.Result.
  //
  rpc BulkAuthorize (BulkAuthorizeRequest) returns (BulkAuthorizeResponse);
}

message AuthenticateRequest {
  oneof credentials {

    // IAM-token obtained from the IAM Token Service.
    // The server response for an empty IAM token is UNAUTHENTICATED
    string iam_token = 1;

    // AWS-compatible signature.
    AccessKeySignature signature = 2;

    // API key.
    // The server response for an empty API key is UNAUTHENTICATED
    string api_key = 3;

    // IAM-cookie.
    // The server response for an empty IAM cookie is UNAUTHENTICATED
    string iam_cookie = 4;
  }
}

message AuthenticateResponse {
  Subject subject = 1;
}

message AuthorizeRequest {
  oneof identity {

    Subject subject = 1;

    // IAM-token obtained from the IAM Token Service.
    // The server response for an empty IAM token is UNAUTHENTICATED
    string iam_token = 2;

    // AWS-compatible signature.
    AccessKeySignature signature = 3;

    // API key.
    // The server response for an empty API key is UNAUTHENTICATED
    string api_key = 6;
  }

  string permission = 4;

  // A resource to authorize access to. This may also include a service-specific hierarchy of the resource, usually
  // ends with resource-manager.folder.
  //
  // Examples:
  //     (resource-manager.folder, b1gn3enigctah04o0fkb)
  //     (billing.account, b1gqql62454n46tboesn)
  //     (compute.instance, b1gqqhvc4fg65mkrefs8), (resource-manager.folder, b1gn3enigctah04o0fkb)
  //     (resource-manager.cloud, aje56o8prppkrpaiuoc6)
  //     (my-service.instance, b1gqqepv0upu57issrog), (resource-manager.cloud, aje56o8prppkrpaiuoc6)
  repeated Resource resource_path = 5;
}

message AuthorizeResponse {
  Subject subject = 1;

  // Full path to the resource.
  repeated Resource resource_path = 2;
}

message BulkAuthorizeRequest {
  oneof identity {

    Subject subject = 1;

    string iam_token = 2;

    AccessKeySignature signature = 3;

    string api_key = 4;
  }

  oneof authorizations {

    Actions actions = 5;

    ActionMatrix action_matrix = 6;
  }

  ResultFilter result_filter = 7;

  google.protobuf.FieldMask result_mask = 8;

  message Action {
    repeated Resource resource_path = 1;

    string permission = 2;
  }

  message Actions {
    repeated Action items = 1;
  }

  // Cross product of paths and permissions (represents N*M actions, N*M <= 1000).
  message ActionMatrix {
    repeated ResourcePath resource_paths = 2;

    repeated string permissions = 1;
  }

  enum ResultFilter {
    RESULT_FILTER_UNSPECIFIED = 0;
    FIRST_FAILED = 1;
    ALL_FAILED = 2;
  }
}

message BulkAuthorizeResponse {
  Subject subject = 1;

  Error unauthenticated_error = 2;

  Results results = 3;

  message Results {
    repeated Result items = 1;
  }

  message Result {
    string permission = 1;

    repeated Resource resource_path = 2;

    Error permission_denied_error = 3;
  }

  message Error {
    string message = 1;

    repeated google.protobuf.Any details = 2;
  }
}

message AccessKeySignature {
  string access_key_id = 1;
  string string_to_sign = 2;
  string signature = 3;

  oneof parameters {
    Version2Parameters v2_parameters = 4;
    Version4Parameters v4_parameters = 5;
  }

  message Version2Parameters {
    SignatureMethod signature_method = 1;

    enum SignatureMethod {
      SIGNATURE_METHOD_UNSPECIFIED = 0;
      HMAC_SHA1 = 1;
      HMAC_SHA256 = 2;
    }
  }

  message Version4Parameters {
    google.protobuf.Timestamp signed_at = 1;
    string service = 2;
    string region = 3;
  }
}

message Subject {
  oneof type {
    UserAccount user_account = 1;
    ServiceAccount service_account = 2;
    AnonymousAccount anonymous_account = 3;
  }

  message UserAccount {
    string id = 1;
    string federation_id = 2;
  }

  message ServiceAccount {
    string id = 1;
    string folder_id = 2;
  }

  // Use this if you want to check if an unauthenticated subject is allowed to access a resource.
  message AnonymousAccount {
  }
}
